tests/NormalTests/paczka1/small_fuzzy/21823710.err
Error in line 2: O5sKTNVIaJb A510 89,1
Error in line 14: 99dsj A634 27,2
